Fix Resume spacing

--- a/src/Routes/Resume/Resume.css
+++ b/src/Routes/Resume/Resume.css
@@ -49,7 +49,9 @@
   margin-left: 16px;
 }
 
-.Resume--project + .Resume--project {
+.Resume--project + .Resume--project,
+.Resume--skill + .Resume--skill,
+.Resume--course + .Resume--course {
   margin-top: 16px;
 }
 
